fix progress bar vertical align

--- a/www/blocks/custom/va/site/_survey-step.scss
+++ b/www/blocks/custom/va/site/_survey-step.scss
@@ -5,7 +5,7 @@ $survey-navigation-height: $global-form-control-font-size*3.1;
   $base-inset-font-size: $global-form-control-font-size * 1.1;
 
   #progress {
-    line-height: 0.8;
+    height: 1em;
     progress {
       width: 90%;
     }
